Thu Sep 16 08:30:28 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sprintf.c (rb_f_sprintf): fix rdoc.  pointed out by Tomoyuki
	  Chikanaga at [ruby-core:32395], and a patch from Daniel
	  Bovensiepen at [ruby-core:32403].

Thu Sep 16 08:27:36 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/etc/extconf.rb: use expanded sysconfdir with empty DESTDIR.
	  [ruby-core:32394]

Wed Sep 15 13:37:00 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* test/net/imap/test_imap.rb: "localhost" not guaranteed to
	  resolve to "127.0.0.1".  On my machine it is "::1" instead.
	  The problem is, you have to connect to the imaps server via
	  the canonical name written in a server certificate, and that
	  of the server.cert is "localhost".  So you have to listen to
	  the address of what "localhost" resolves to.  I think this
	  situation cannot be resolved in a handy manner because the
	  test "test_imaps_post_connection_check" is actually
	  expecting to connect to a server via an address other than
	  the CN.  On my machine several assertions won't pass because
	  the test cannot connect to the server.

Wed Sep 15 09:12:03 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_puts): fix for wide char encoding strings.
	  [ruby-dev:42212]

Wed Sep 15 07:27:52 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_times): mentioned about Hash argument.  a patch
	  from Daniel Bovensiepen at [ruby-core:32386].

	* sprintf.c (get_hash): ditto, and fix typo.

Mon Sep 13 19:56:50 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/rubysocket.h (__DARWIN_ALIGNBYTES): workaround of a
	  bug in system header of darwin 9.  [ruby-core:32341]

Mon Sep 13 10:12:09 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* util.c (ruby_strtod): reject Float('0x0.').
	  [ruby-dev:42239] Bug #3820

Mon Sep 13 09:23:58 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/openssl/ossl_bn.c (ossl_bn_is_prime): fix comparison
	  with rb_scan_args. Before this fix, OpenSSL::BN#prime?