@@ -190,6 +190,6 @@ if $0 == __FILE__
   ARGV.shift
   Tracer.on
   require $0
-elsif caller.size <= 1 
+elsif caller.count {|bt| /\A<internal:[^<>]+>:/ !~ bt} <= 1
   Tracer.on
 end
